# filegrep

./: .clang-format  CMakeLists.txt  README.md  Sanitizers.cmake
include/: arg_parse.hpp  file_finder.hpp  grepped_file.hpp  launcher.hpp  regex_lookup.hpp
src/: arg_parse.cpp  arg_parser.cpp  file_finder.cpp  filegrep.cpp  grepped_file.cpp  launcher.cpp  regex_lookup.cpp
test/: CMakeLists.txt
test/data/: lnx_kernel_doc.txt  test_text_file.txt
test/data/lnx_kernel_api/: api_1.txt  api_2.txt
test/data/wiki_ludwigsburgs_palace/: wiki_1.txt  wiki_2.txt
test/src/: arg_parser_test.cpp  file_finder_test.cpp  grepped_file_test.cpp  regex_string_test.cpp
